--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Strip
 http://www.templatemo.com/tm-482-strip
 -->
     <!-- load stylesheets -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400">   <!-- Google web font "Open Sans" -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">   <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="css/bootstrap.min.css">                                      <!-- Bootstrap style -->
     <link rel="stylesheet" href="css/templatemo-style.css">                                   <!-- Templatemo style -->
 
@@ -83,7 +83,7 @@ http://www.templatemo.com/tm-482-strip
                         
                     </div>
                     <div class="tm-flex-center col-xs-12 col-sm-6 col-md-6 col-lg-5 col-xl-6">
-                        <img src="img/timing.png" alt="Image" class="img-fluid tm-img">
+                        <img src="../img/timing.png" alt="Image" class="img-fluid tm-img">
                     </div>
                 </section> <!-- #home -->
 
@@ -126,7 +126,7 @@ http://www.templatemo.com/tm-482-strip
                         
                     </div>
                     <div class="tm-flex-center col-xs-12 col-sm-6 col-md-6 col-lg-5 col-xl-6">
-                        <img src="img/south.jpg" alt="Image" class="img-fluid tm-img">
+                        <img src="../img/south.jpg" alt="Image" class="img-fluid tm-img">
                     </div>
                 </section> <!-- #about -->
 
