--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ http://www.templatemo.com/tm-482-strip
                         
                     </div>
                     <div class="tm-flex-center col-xs-12 col-sm-6 col-md-6 col-lg-5 col-xl-6">
-                        <img src="img/south.jpg" alt="Image" class="img-fluid tm-img">
+                        <img src="img/southrail.jpg" alt="Image" class="img-fluid tm-img">
                     </div>
                 </section> <!-- #about -->
 
