--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ http://www.templatemo.com/tm-482-strip
                         
                         <div class="tm-white-curve-text">
                             <h2 class="tm-section-header red-text">Our Services</h2>
-                            <p><b>Station Name :</b>KAYALPATTINAM Railway Station
+                            <p><b>Station Name :</b>KAYALPATTINAM Railway Station<br>
                             <b>Station Code :</b> KZY <br>
                             <b>RailWay Zone :</b> SOUTHERN RAILWAY <br>
                             <b>Enquiry phone number :</b> 139</p>
