--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='description' content="Kayalpatnam Railway Timing">
+        <meta name='keywords' content="">
 
+    <link rel="icon" 
+      type="image/png" 
+      href="img/train.png">
     <title>Kayalpatnam Railway Station </title>
 <!--
 Strip
