upcoming add images

--- a/index.html
+++ b/index.html
@@ -126,7 +126,17 @@ http://www.templatemo.com/tm-482-strip
                                      <img src="img/platform.png" class="img-responsive img-fluid tm-img">
                                      <h3 class="tm-section-header tm-flex-center">Platform Coachs</h3>
                             </div>
+                            <div class="col-md-6">
+                                     <img src="img/bus-stop.jpg" class="img-responsive img-fluid tm-img">
+                                     <h3 class="tm-section-header tm-flex-center">Bus Stop</h3>
+                            </div> 
+                            <div class="col-md-6">
+                                     <img src="img/park.jpg" class="img-responsive img-fluid tm-img">
+                                     <h3 class="tm-section-header tm-flex-center">Children Park</h3>
+                            </div>
+
                         </div>  
+
                     </div>
                 </section> <!-- #about -->
 
