--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='description' content="Find complete time table of KAYALPATTINAM (KZY) railway station. One can find station code of KAYALPATTINAM. Trains arrival and departure time at this station regarding.">
+    <link rel="shortcut icon" type="image/x-icon" href="img/train.png" />
 
     <title>Kayalpatnam Railway Station </title>
 <!--
@@ -155,7 +157,7 @@ http://www.templatemo.com/tm-482-strip
 
                 <!-- #contact -->
                 <section id="tm-section-4" class="row tm-section">
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5 col-xl-6 tm-contact-left">
+                    <div id="Summer-Specials-Trains-2018" class="col-xs-12 col-sm-6 col-md-6 col-lg-5 col-xl-6 tm-contact-left">
                         <img src="img/spl-train.jpg" class="img-responsive img-fluid tm-img">
                         <a href="Summer-Specials-2018.pdf" download="Summer Special Trains 2018">
                           <img src="img/download.png" class="img-responsive img-fluid tm-img">
